--- a/web/fitness.html
+++ b/web/fitness.html
@@ -14,9 +14,6 @@
 
 		gallery.addImage('res/fitness1.gif', $('#gallery-1'));
 		gallery.addImage('res/fitness2.png', $('#gallery-2'));
-		gallery.addImage('res/common_pics1.png', $('#gallery-3'));
-		gallery.addImage('res/common_pics1.png', $('#gallery-4'));
-		gallery.addImage('res/common_pics1.png', $('#gallery-5'));
 
 		gallery.init(0);
 
@@ -50,7 +47,7 @@
 			<li><a href="room.html">客房住宿</a></li>
 			<li class="selected"><a href="fitness.html">动感五洲</a></li>
 			<li><a href="conference.html">五洲之夜</a></li>
-			<li><a href="cusine.html">菜品展示</a></li>
+			<li><a href="cusine.html">五洲美食</a></li>
 			<li><a href="aboutus.html">关于我们</a></li>
 		</ul>
 	</div>
@@ -60,36 +57,18 @@
 		<div id="splashBox" class="box">
 			<div id="gallery" class="gallery">
 				<div id="gallery-box" class="section"></div>
-				<div id="gallery-1" class="section" style="display: none">
-					<h3>室内网球场</h3>
-					<h4 class="subheading">极致的运动享受</h4>
-					<p>此处需酒店提供相应文档</p>
-				</div>
-				<div id="gallery-2" class="section" style="display: none;">
+				<div id="gallery-1" class="section" style="display: none;">
 					<h3>恒温游泳池</h3>
-					<h4 class="subheading">24小时恒温游泳池</h4>
-					<p>此处需酒店提供相应文档</p>
+					<h4 class="subheading"></h4>
+					<p>30米长的室内恒温游泳池，碧波荡漾，伴随着您矫健的泳姿成为酒店一道不可或缺的靓丽的风景线，独立的男女更衣区配有豪华淋浴房将帮助您恢复活力，神采焕发。</p>
 				</div>
-				<div id="gallery-3" class="section" style="display:none;">
-					<h3>室内健身房</h3>
-					<h4 class="subheading">专业的室内健身设备</h4>
-					<p>此处需酒店提供相应文档</p>
-				</div>
-				<div id="gallery-4" class="section" style="display:none;">
-					<h3>斯诺克及美式台球</h3>
-					<h4 class="subheading">英式斯诺克及美式台球</h4>
-					<p>此处需酒店提供相应文档</p>
-				</div>
-				<div id="gallery-5" class="section" style="display:none;">
-					<h3>SPA按摩中心</h3>
-					<h4 class="subheading">法国温泉SPA按摩中心</h4>
-					<p>此处需酒店提供相应文档</p>
+				<div id="gallery-2" class="section" style="display:none;">
+					<h3>室内网球场</h3>
+					<h4 class="subheading"></h4>
+					<p>重庆五洲大酒店网球场拥有最先进的设施设备，是西南地区第一家全封闭带中央冷暖空调并配有两个按国际赛事标准修建的网球场；专业的网球教练及陪练服务为您提供淋漓酣畅的运动体验。</p>
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
 						<li><a href="#"></a></li>
 						<li><a href="#"></a></li>
 					</ul>
