--- a/web/index.html
+++ b/web/index.html
@@ -80,7 +80,7 @@
 				<div id="gallery-2" class="section" style="display: none;">
 					<h3>客房住宿</h3>
 					<h4 class="subheading">触摸奢华之旅</h4>
-					<p>宽敞明亮的客房和套间，柔和的色调，温柔的灯光。先进的设施体贴入微的服务，唤醒您的所有感官，带给您清新舒爽的全新感受。。</p>
+					<p>酒店共有客房199间，其中豪华套房5间，商务套房19间，特色房4间，豪华单人房4间，行政单人间54间，商务标准间113间。客房家具仿古、贴金、胡桃木饰面，高贵典雅，房间均配有液晶平面电视，免费的高速宽带上网，是您商务、旅行休闲的首选。</p>
 					<div class="more">
 						<a class="legend" href="#">了解更多 ▶</a>
 						<div class="menu">
@@ -97,7 +97,7 @@
 				<div id="gallery-3" class="section" style="display:none;">
 					<h3>动感五洲</h3>
 					<h4 class="subheading">身心合一的运动享受</h4>
-					<p>此处需要酒店提供相应文档</p>
+					<p>荡涤都市尘嚣，解除一身束缚，五洲大酒店室内恒温游泳池、室内网球场是让您在繁忙的商旅搏击之余，能够保持强健的体魄，解除身心疲乏的绝佳场所！</p>
 					<div class="more">
 						<a class="legend" href="#">了解更多 ▶</a>
 						<div class="menu">
@@ -113,8 +113,8 @@
 				</div>
 				<div id="gallery-4" class="section" style="display:none;">
 					<h3>五洲之夜</h3>
-					<h4 class="subheading">会所、KTV－感受魅力重庆</h4>
-					<p>此处需要酒店提供相应文档</p>
+					<h4 class="subheading">会所、KTV</h4>
+					<p>感受魅力重庆</p>
 					<div class="more">
 						<a class="legend" href="#">了解更多 ▶</a>
 						<div class="menu">
@@ -130,7 +130,7 @@
 				<div id="gallery-5" class="section" style="display:none;">
 					<h3>五洲美食</h3>
 					<h4 class="subheading">尊享味觉饕餮盛宴</h4>
-					<p>此处需要酒店提供相应文档</p>
+					<p>酒店同时拥有中、西特色餐厅。是承办大型会议用餐、婚宴、寿宴的理想场所。酒店拥有一支重庆餐饮界重量级的厨师队伍，由香港鲍鱼大师“杨贯一”嫡传弟子领衔主理。菜品川粤结合，美膳荟萃、款款经典，每日精心推出多款全新菜品，供君品尝。</p>
 					<div class="more">
 						<a class="legend" href="#">了解更多 ▶</a>
 						<div class="menu">
